p2/config/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-app1-deployment
  namespace: inception-p2-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      application: p2-app1-pod
  template:
    metadata:
      labels:
        application: p2-app1-pod
    spec:
      containers:
        - name: p2-app1-container
          image: nginx:latest
          ports:
            - containerPort: 80
          command:
              - /bin/sh
              - -c
              - |
                echo "Hello from APP 1" > /usr/share/nginx/html/index.html
                nginx -g "daemon off;"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-app2-deployment
  namespace: inception-p2-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      application: p2-app2-pod
  template:
    metadata:
      labels:
        application: p2-app2-pod
    spec:
      containers:
        - name: p2-app2-container
          image: nginx:latest
          ports:
            - containerPort: 80
          command:
              - /bin/sh
              - -c
              - |
                echo "Hello from APP 2" > /usr/share/nginx/html/index.html
                nginx -g "daemon off;"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-app3-deployment
  namespace: inception-p2-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      application: p2-app3-pod
  template:
    metadata:
      labels:
        application: p2-app3-pod
    spec:
      containers:
        - name: p2-app3-container
          image: nginx:latest
          ports:
            - containerPort: 80
          command:
              - /bin/sh
              - -c
              - |
                echo "Hello from APP 3" > /usr/share/nginx/html/index.html
                nginx -g "daemon off;"
