p2/config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-app1-service
  namespace: inception-p2-namespace
spec:
  type: ClusterIP
  selector:
    application: p2-app1-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: p2-app2-service
  namespace: inception-p2-namespace
spec:
  type: ClusterIP
  selector:
    application: p2-app2-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: p2-app3-service
  namespace: inception-p2-namespace
spec:
  type: ClusterIP
  selector:
    application: p2-app3-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
