p2/config/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      appname: app2
  replicas: 3
  template:
    metadata:
      labels:
        appname: app2
    spec:
      containers:
        - name: app2-container
          image: nginx:1
          command:
            - /bin/sh
            - -c
            - |
              echo "Hello from APP 2" > /usr/share/nginx/html/index.html
              nginx -g "daemon off;"
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    appname: app2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 8082
